--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "mongoose": "^4.10.5",
     "react": "^15.5.4",
     "react-dom": "^15.5.4",
-    "react-router": "^4.1.1"
+    "react-router": "^4.1.1",
+    "react-router-dom": "^4.1.1"
   },
   "devDependencies": {
     "babel-core": "^6.21.0",
